--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   intl: ^0.17.0
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
