--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   intl: ^0.17.0
   dotted_border: ^2.0.0+2
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
