--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.17.0
   dotted_border: ^2.0.0+2
   charts_flutter: ^0.12.0
+  firebase_auth: ^3.3.7
 
 dev_dependencies:
   flutter_test:
