--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dotted_border: ^2.0.0+2
   charts_flutter: ^0.12.0
   firebase_auth: ^3.3.7
+  cloud_firestore: ^3.1.8
 
 dev_dependencies:
   flutter_test:
