--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   charts_flutter: ^0.12.0
   firebase_auth: ^3.3.7
   cloud_firestore: ^3.1.8
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
