--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
           flutter-version: '2.10.2'
       - run: flutter pub get
         working-directory: ./scheduler
-      - name: flutter widget test
-        run: flutter test test/widget_test.dart
+      - name: flutter test
+        run: flutter test
         working-directory: ./scheduler
