--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - master
 jobs:
   widget-test:
-    name: flutter widget test
+    name: flutter test
     runs-on: ubuntu-latest
     steps:
       - name: set up repository
@@ -19,5 +19,13 @@ jobs:
       - run: flutter pub get
         working-directory: ./scheduler
       - name: flutter test
-        run: flutter test
+        run: flutter test --coverage
         working-directory: ./scheduler
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: coverage/lcov.*.info
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: ./scheduler
+          
