--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Report code coverage
         uses: zgosalvez/github-actions-report-lcov@v1
         with:
-          coverage-files: coverage/lcov.*.info
+          coverage-files: coverage/lcov.info
           artifact-name: code-coverage-report
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: ./scheduler
           
