--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,7 @@ jobs:
         run: flutter test --coverage
         working-directory: ./scheduler
       - name: Report code coverage
-        uses: zgosalvez/github-actions-report-lcov@v1
+        uses: romeovs/lcov-reporter-action@v0.2.16
         with:
-          coverage-files: coverage/lcov.info
-          artifact-name: code-coverage-report
-          working-directory: ./scheduler
+          lcov-file: ./scheduler/coverage/lcov.info
           
