--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: flutter test --coverage
         working-directory: ./scheduler
       - name: Report code coverage
-        uses: romeovs/lcov-reporter-action@v0.3.1
+        uses: codecov/codecov-action@v2
         with:
-          lcov-file: ./scheduler/coverage/lcov.info
+          files: ./scheduler/coverage/lcov.info
           
