--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Report code coverage
         uses: codecov/codecov-action@v2
         with:
-          files: ./scheduler/coverage/lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./scheduler/coverage
+          files: ./lcov.info
           
