--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.3.7
   cloud_firestore: ^3.1.8
   provider: ^6.0.2
+  flutter_hooks: ^0.18.0
+  hooks_riverpod: ^2.0.0-dev.4
 
 dev_dependencies:
   flutter_test:
