--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: flutter-test
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [synchronize]
   push:
 jobs:
   widget-test:
