--- a/scheduler/pubspec.yaml
+++ b/scheduler/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^3.1.8
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.0.0-dev.4
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
