--- a/scheduler/functions/package.json
+++ b/scheduler/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
